--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,32 @@ jobs:
   build_sysmon:
     runs-on: ubuntu-latest
     steps:
+    - name: Add mono-project key
+      run: sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+    - name: Add entry to sources.list
+      run: echo "deb https://download.mono-project.com/repo/ubuntu vs-bionic main" | sudo tee /etc/apt/sources.list.d/mono-official-vs.list
+    - name: Update repos
+      run: sudo apt update
+    - name: Install dependencies
+      run: sudo apt -y install build-essential gcc g++ make cmake libelf-dev llvm clang libxml2 libxml2-dev libzstd1 git libgtest-dev apt-transport-https dirmngr monodevelop googletest google-mock libjson-glib-dev
+    - name: Create googletest build dir
+      working-directory: /usr/src/googletest
+      run: mkdir build
+    - name: Create googletest build dir
+      working-directory: /usr/src/googletest
+      run: chown *user*:*group* build
+    - name: Create googletest build dir
+      working-directory: /usr/src/googletest
+      run: chown *user*:*group* build
+    - name: Create googletest build dir
+      working-directory: /usr/src/googletest/build
+      run: cmake ..
+    - name: Create googletest build dir
+      working-directory: /usr/src/googletest/build
+      run: make
+    - name: Create googletest build dir
+      working-directory: /usr/src/googletest/build
+      run: sudo make install
     - name: Create build dir
       run: mkdir build_sysmon
     - name: Run cmake
