--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,9 @@ jobs:
       run: sudo make install
     - name: Create sysmon build dir
       run: mkdir build_sysmon
-    - name: run pwd
-      run: pwd
+    - name: run ls
+      working-directory: build_sysmon
+      run: ls ..
     - name: run pwd2
       working-directory: build_sysmon
       run: pwd
