--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,14 +26,13 @@ jobs:
       run: sudo make install
     - name: Create sysmon build dir
       run: mkdir build_sysmon
-    - name: run ls
+    - name: run ls ..
       working-directory: build_sysmon
       run: ls ..
     - name: run pwd2
       working-directory: build_sysmon
       run: pwd
     - name: Run sysmon cmake
-      working-directory: build_sysmon
-      run: cmake ..
+      run: cmake -S . -B build_sysmon
     - name: Build sysmon
       run: make
